<resources>

    <!-- All texts in the app -->

    <string name="app_name">EasyTask</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_find">Find tasks</string>
    <string name="navigation_drawer_myprofile">My profile</string>
    <string name="navigation_drawer_mytasks">My Tasks</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_user">Current User:</string>
    <string name="navigation_drawer_logout">Log out</string>
    <string name="action_settings">Settings</string>

    <string name="login_btn">Log in</string>
    <string name="login_create_user_btn">Create User</string>
    <string name="email">Email</string>
    <string name="create_user_title">Create User</string>
    <string name="create_user_2nd_pass">Repeat Password</string>
    <string name="create_user_type_title">You will be</string>
    <string name="create_user_type_1">Doing tasks</string>
    <string name="create_user_type_2">Creating tasks</string>
    <string name="create_user_return_btn">Return to login screen</string>
    <string name="login_progressbar_title">Logging in</string>
    <string name="login_progressbar_subtitle">Please wait</string>
    <string name="create_task_title">Create Task</string>
    <string name="create_task_subject">Subject</string>
    <string name="create_task_description">Description</string>
    <string name="create_task_payment">Payment</string>
    <string name="create_task_createbtn">Create Task</string>
    <string name="create_task_returnbtn">Return to main screen</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
