<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_findtasks"
            android:icon="@drawable/ic_magnifying_glass"
            android:title="@string/navigation_drawer_find" />

        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/navigation_drawer_myprofile" />
        <item
            android:id="@+id/nav_mytasks"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/navigation_drawer_mytasks" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/navigation_drawer_about" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/navigation_drawer_logout" />
    </group>

</menu>
